2009-09-09  Thomas Heller  <theller@python.net>

	* Fix returning SAFEARRAY of VT_RECORDs.  Based on a patch from
	Eduardo Arias.

	* New module comtypes.viewobject, contains the interfaces
	IViewObject, IViewObject2, IViewObjectEx.  IAdviseSink is faked.

	* Change version number to 0.6.2dev.

2009-09-04  Thomas Heller  <theller@python.net>

	* CoTaskMemFree does not return a HRESULT.  Patch from James Teh.

2009-08-19  Thomas Heller  <theller@python.net>

	* Bumped version number to 0.6.1.

2009-08-07  Thomas Heller  <theller@python.net>

	* When an interface was specified in the call to
	IClassObject.CreateInstance, return that instead of calling
	GetBestInterface.  Patch from James Teh.

2009-08-04  Thomas Heller  <theller@python.net>

	* Added comtypes.CoGetClassObject() low-level function,
	comtypes.client.GetClassObject() high-level function, and
	implemented a pythonic interface to IClassFactory's CreateInstance
	method:

	    def CreateInstance(self,
			       punkouter=None,
			       interface=None,
			       dynamic=False)

	* Added the 'dynamic=False' parameter to the
	comtypes.client.CoGetObject and comtypes.client.GetActiveObject
	functions.  Suggested by James Teh.

2009-06-17  Thomas Heller  <theller@python.net>

	* comtypes.automation: Support VT_I8 and VT_UI8 SAFEARRAYs.

	* comtypes._comobject: Restore compatibility with Python 2.3.

	* Add the comtypes.IServiceProvider interface.  Based on a patch
	from Michael Curran.

2009-04-30  Thomas Heller  <theller@python.net>

	* Change version number in repository to 0.6.0.2dev.

	* Replace the VARIANTEnumerator implementation class in
	comtypes.server.automation with a new one which should actually be
	usable.

	* A completely new way how localserver and inproc server instances
	are managed:

		A comtypes.LocalServer or comtypes.InprocServer instance
		is attached to the comtypes.COMObject class at runtime.

		These changes keep localserver running as long as
		COMObject instances are alive.
